Wed Jun 24 13:56:48 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * docs/tutorials/Quoter/Simple/03.html:
        * docs/tutorials/Quoter/Simple/images/fig4.jpg:
        * docs/tutorials/Quoter/Simple/images/fig5a.jpg:
          Updated to meet the latest version of the DAnCE spec.        

Wed Jun 24 07:31:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/TargetManager/TargetManager.mpc:
          Resolved typo (RepositoryManager_IDL=>TargetManager_IDL).

        * docs/tutorials/Quoter/Simple/Broker/StockBroker.mpc:
        * docs/tutorials/Quoter/Simple/Distributor/StockDistributor.mpc:
        * docs/tutorials/Quoter/Simple/Stock_Base/Stock_Base.mpc:
          Added lib path (like Hello example).

        * docs/tutorials/Quoter/Simple/descriptors/Plan.cdp:
          Should match the current DAnCE spec.

Tue Jun 23 18:11:56 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/Deployment_TargetManager.idl:

          bring in line with spec.

        * DAnCE/TargetManager/DomainDataManager.h:
        * DAnCE/TargetManager/DomainDataManager.cpp:
        * DAnCE/TargetManager/ResourceCommitmentManager.h:
        * DAnCE/TargetManager/ResourceCommitmentManager.cpp:
        * DAnCE/TargetManager/TM_Client.mpc:
        * DAnCE/TargetManager/TargetManager.mpc:
        * DAnCE/TargetManager/TargetManagerDaemon.idl:
        * DAnCE/TargetManager/TargetManager_Impl.h:
        * DAnCE/TargetManager/TargetManager_Impl.cpp:
        * DAnCE/TargetManager/Target_Manager_Exec.cpp:
        * DAnCE/TargetManager/Target_Manager_Module.h:
        * DAnCE/TargetManager/Target_Manager_Module.cpp:
        * DAnCE/TargetManager/Target_Manager_Module_export.h:
        * MPC/config/dance_target_manager.mpb:

          Initial pass at porting the TargetManager.  Work is by no means
          complete or workable.  TargetManager will no longer be deployed as a component.

        * DAnCE/TargetManager/descriptors/Domain.cdd: