@@ -3,6 +3,7 @@
 project (DAnCE_TargetManager_IDL) : ciaoidldefaults {
   custom_only = 1
 
+  idlflags += -Gxhst -Gxhsk
   idlflags += -Wb,stub_export_macro=TARGETMANAGER_STUB_Export \
               -Wb,stub_export_include=TargetManager_stub_export.h \
               -Wb,skel_export_macro=TARGETMANAGER_SVNT_Export \
@@ -16,17 +17,20 @@ project (DAnCE_TargetManager_IDL) : ciaoidldefaults {
 project(DAnCE_TargetManager_stub) : dance_lib, dance_deployment_stub {
   sharedname = DAnCE_TargetManager_stub
   dynamicflags   = TARGETMANAGER_STUB_BUILD_DLL
+  after += DAnCE_TargetManager_IDL
+  IDL_Files {
+  }
 
   Source_Files {
     TargetManagerDaemonC.cpp
   }
 }
 
-project(DAnCE_TargetManager_Impl) : dance_lib, ciao_config_handlers {
+project(DAnCE_TargetManager_Impl) : dance_lib, ciao_config_handlers, naming {
   sharedname = DAnCE_TargetManager_Impl
   libs += DAnCE_TargetManager_stub DAnCE_TargetManager_svnt
   after += DAnCE_TargetManager_svnt 
-  dynamicflags = TARGETMANAGER_EXEC_BUILD_DLL
+  dynamicflags = DANCE_TARGETMANAGER_IMPL_BUILD_DLL
 
   Source_Files {
     DomainDataManager.cpp
