@@ -1,9 +1,18 @@
+Wed Jun 24 15:50:36 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/TargetManager/DomainDataManager.h:
+        * DAnCE/TargetManager/TargetManager.mpc:
+        * DAnCE/TargetManager/TargetManager_Impl.h:
+        * DAnCE/TargetManager/TargetManager_Impl_export.h:
+
+          Stab at fixing linking problems. 
+        
 Wed Jun 24 13:56:48 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * docs/tutorials/Quoter/Simple/03.html:
         * docs/tutorials/Quoter/Simple/images/fig4.jpg:
         * docs/tutorials/Quoter/Simple/images/fig5a.jpg:
-          Updated to meet the latest version of the DAnCE spec.        
+          Updated to meet the latest version of the DAnCE spec.
 
 Wed Jun 24 07:31:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
